# ai_sorting_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  service.yaml  validate_llm_dedup.py
.learnings/: LEARNINGS.md
artifacts/: deployment-2026-07-04.md  deployment-2026-07-05.md
src/: config.py  google_clients.py  main.py  pipeline.py  programs.py
src/adk_agents/: __init__.py  agent.py  prompts.py  schemas.py  workflow.py
