[project]
name = "ai-sorting-agent"
version = "0.1.0"
description = "ADK agent that sorts startup applications by HQ country into Google Sheet tabs"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
